syntax = "proto3";
package newsPackage;

service NewsService {
    rpc GetAllNews (Empty) returns (News) {}
}

message Empty {}
message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}